# fastapi-social

./: README.md  app.py  notes.md  pyproject.toml
app/: app.py  database.py  models.py  schemas.py
app/routers/: post.py  user.py
